fix brand color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@
   --brand-primary-dark: #7a7ae2;
   --brand-primary-dark-hover: #9292ea;
   --brand-primary-dark-active: #6262bb; */
-  --brand-primary: #6b6bcf;
+  --brand-primary: #6868c8;
   --brand-primary-hover: #8080d9;
   --brand-primary-active: #5555a8;
   --brand-primary-dark: #8080ed;
